Host bindings stop being typos, and a string finally has members
The third review batch — R-02, R-14, R-18, R-21, R-22, R-23, R-24, R-28,
R-29, R-30, plus the cleanliness sweep (R-50 through R-58) and the tests the
whole review was missing.

A binding a mod puts in scope was drawn as a mistake. It is declared nowhere in
the file and is not one of JavaScript's own, so `world` was coloured
`variable.unresolved`, offered a rename and an offer to declare it as a local,
and hovered as nothing — in the one editor whose own runtime provides it. The
`variable.global` capture the vocabulary reserves for exactly this was dead
code. `ScriptBindings` already carries each binding's declared Java TYPE, so
the analyser now takes both: the name is a global, and `world.` lists the Java
engine's own members before anything has run.

`'abc'.`, `[1, 2].` and `settings.label.` resolved to a type and then offered
NOTHING, because `membersOf` only ever knew how to ask the Java engine. Worse
than nothing: an empty answer sent completion to its "I cannot type this
receiver" fallback, which offers every global the last run left AS MEMBERS OF A
STRING. The standard prototypes are read from the engine now, with `getAllIds`
— every prototype member is non-enumerable, which is the trap this codebase has
now paid for twice — and the fallback is restricted to a receiver with no
knowable type, which is what it was written for.

A runtime error's row means something only against the text that ran. A run
takes time and the file is edited while it runs, so converting against the
buffer as it is now put the squiggle one row off per line typed above. The
compiled source travels with the compilation, the offsets are computed against
it, and a report whose text has since changed is dropped rather than drawn
somewhere plausible and wrong.

`SimilarNames` moves to `com.crystalgui.text`. `JsQuickFixes` is child-side and
imported it from `language.java`, which the band loader is child-first over —
so it quiet